kubernetes/book-frontend.yml
apiVersion: apps/v1 # For versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:   # Data that helps  uniquely identify the object (using name, UID and namespace)
  name: book-frontend
  labels:
    app: book-frontend
  namespace: default
spec:  # What state you desire for the object
  replicas: 1  # Tells the deployment to run 1 pod matching the template
  selector:  # The selector field defines how the deployment finds which pod to manage
    matchLabels:
      app: book-frontend
  template:
    metadata:
      labels:  # Labels are used as indentifying attributes for objects such as pods and replication controller.
        app: book-frontend
    spec:
      containers:
        - name: book-frontend
          image: sivabalusu05/book-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: book-frontend
  labels:
    name: book-frontend
  namespace: default
spec:
  selector:
    app: book-frontend
  ports:
    - port: 80    # access the service via external port no
      targetPort: 80  # port number that container listening on
      protocol: TCP
  type: NodePort     # which expose the application on a port across a each of your nodes
  # make the service available to network requests from external clients
