kubernetes/mysql-deployment.yml
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mysqldb  # DNS name
  labels:
    app: mysqldb
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:       # mysql Pod Should contain same labels
    app: mysqldb
    tier: database
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
---
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  labels:
    app: mysqldb
    tier: database
spec:
  selector: # mysql Pod Should contain same labels
    matchLabels:
      app: mysqldb
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: mysqldb
        tier: database
    spec:
      containers:
        - name: mysqldb
          image: mysql:5.7 # image from docker-hub
          imagePullPolicy: Always
          args:
            - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
          ports:
            - containerPort: 3306
              name: mysqldb
          volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
      restartPolicy: Always
      volumes:
        - name: mysql-persistent-storage # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: mysql-pv-claim
