kubernetes/search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    app: search-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: sivabalusu05/bookapp-search-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8092
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: default
spec:
  selector:
    app: search-service
  ports:
    - port: 8092
      targetPort: 8092
      protocol: TCP
  type: ClusterIP
