kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookapp-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
      - host: bookapp.net
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                serviceName: book-frontend
                servicePort: 80
#            - path: /
#              pathType: Prefix
#              backend:
#                serviceName: api-gateway
#                servicePort: 8099
